--- a/Tutorial/custom_addons/my_library/views/library_book.xml
+++ b/Tutorial/custom_addons/my_library/views/library_book.xml
@@ -22,6 +22,25 @@
 				<group>
 					<field name="name"/>
 					<field name="author_ids" widget="many2many_tags"/>
+					<field name="publisher_id" widget="many2one_tags"/>
+					<field name="state"/>
+					<field name="pages"/>
+					<field name="notes"/>
+					<field name="category_id"/>
+					<field name="cost_price"/>
+				</group>
+				<group>
+					<field name="short_name"/>
+					<field name="date_release"/>
+					<field name="date_updated"/>
+					<field name="cover" widget="image" class="oe_avatar"/>
+					<field name="reader_rating"/>
+					<field name="out_of_print"/>
+					<field name="retail_price"/>
+					<field name="currency_id"/>
+				</group>
+				<group>
+					<field name="description"/>
 				</group>
 			</group>
 		    </form>
@@ -36,6 +55,7 @@
 			<tree>
 				<field name="name"/>
 				<field name="date_release"/>
+				<field name="retail_price"/>
 			</tree>
 		</field>
 	</record>
