Added method using api

--- a/Tutorial/custom_addons/my_library/views/library_book.xml
+++ b/Tutorial/custom_addons/my_library/views/library_book.xml
@@ -23,7 +23,10 @@
 					<field name="name"/>
 					<field name="author_ids" widget="many2many_tags"/>
 					<field name="publisher_id" widget="many2one_tags"/>
-					<field name="state"/>
+					<field name="state" widget="statusbar"/>
+					<button name="make_available" string="Make Available" type="object"/>
+					<button name="make_borrowed" string="Make Borrowed" type="object"/>
+					<button name="make_lost" string="Make Lost" type="object"/>
 					<field name="pages"/>
 					<field name="notes"/>
 					<field name="category_id"/>
