Worked on Category

--- a/Tutorial/custom_addons/my_library/views/library_book.xml
+++ b/Tutorial/custom_addons/my_library/views/library_book.xml
@@ -49,6 +49,7 @@
 					<field name="ref_doc_id"/>
 					<field name="out_of_print"/>
 					<field name="active"/>
+					<button name="log_all_library_members" string="Log Members" type="object"/>
 				</group>
 			</group>
 		    </form>
