--- a/Tutorial/custom_addons/my_library/views/library_book_categ.xml
+++ b/Tutorial/custom_addons/my_library/views/library_book_categ.xml
@@ -18,7 +18,8 @@
 				<group>
 					<group>
 						<field name="name"/>
-						<field name="parent_id"/>
+						<field name="parent_id" widget="many2one_tags"/>
+						<button name="create_categories" string="Create Category" type="object"/>
 					</group>
 				</group>
 			</form>
