--- a/Task1/custom_addons/employee_recruit/views/hr_applicant_ext_view.xml
+++ b/Task1/custom_addons/employee_recruit/views/hr_applicant_ext_view.xml
@@ -23,6 +23,7 @@
                             <field name="passing_year"/>
                         </tree>
                     </field>
+                    <field name="parent_id" widget="many2one_tags"/>
                 </group>
             </xpath>
         </field>
