--- a/Task1/custom_addons/employee_recruit/views/hr_employee_em_view.xml
+++ b/Task1/custom_addons/employee_recruit/views/hr_employee_em_view.xml
@@ -1,45 +1,45 @@
-<!--<?xml version="1.0" encoding="utf-8"?>-->
-<!--<odoo>-->
-<!--    <record id="emergency_view_employee_form" model="ir.ui.view">-->
-<!--        <field name="name">hr.employee.form.emergency</field>-->
-<!--        <field name="model">hr.employee</field>-->
-<!--        <field name="inherit_id" ref="hr.view_employee_form"/>-->
-<!--        <field name="arch" type="xml">-->
-<!--            <xpath expr="//group[@name='work_permit']" position="before">-->
-<!--                <page string="Emergency Contact">-->
-<!--                    <group>-->
-<!--                        <field name="emergency_id" widget="one2many_list">-->
-<!--                            <tree editable="top">-->
-<!--                                <field name="em_name"/>-->
-<!--                                <field name="em_phone"/>-->
-<!--                                <field name="em_address"/>-->
-<!--                            </tree>-->
-<!--                        </field>-->
-<!--&lt;!&ndash;                        <field name="manager" widget="many2one_tags"/>&ndash;&gt;-->
-<!--                    </group>-->
-<!--                </page>-->
-<!--            </xpath>-->
-<!--        </field>-->
-<!--    </record>-->
+<?xml version="1.0" encoding="utf-8"?>
+<odoo>
+    <record id="emergency_view_employee_form" model="ir.ui.view">
+        <field name="name">hr.employee.form.emergency</field>
+        <field name="model">hr.employee</field>
+        <field name="inherit_id" ref="hr.view_employee_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group[@name='work_permit']" position="before">
+                <page string="Emergency Contact">
+                    <group>
+                        <field name="emergency_ids" widget="one2many_list">
+                            <tree editable="top">
+                                <field name="emp_name"/>
+                                <field name="emp_phone"/>
+                                <field name="emp_address"/>
+                            </tree>
+                        </field>
+<!--                        <field name="manager" widget="many2one_tags"/>-->
+                    </group>
+                </page>
+            </xpath>
+        </field>
+    </record>
 
-<!--    <record id="education_view_employee_form" model="ir.ui.view">-->
-<!--        <field name="name">hr.employee.form.education</field>-->
-<!--        <field name="model">hr.employee</field>-->
-<!--        <field name="inherit_id" ref="hr.view_employee_form"/>-->
-<!--        <field name="arch" type="xml">-->
-<!--            <xpath expr="//group[@name='work_permit']" position="after">-->
-<!--                <page string="Emergency Contact">-->
-<!--                    <group>-->
-<!--                        <field name="education_id" widget="one2many_list">-->
-<!--                            <tree editable="top">-->
-<!--                                <field name="institute"/>-->
-<!--                                <field name="degree"/>-->
-<!--                                <field name="passing_year"/>-->
-<!--                            </tree>-->
-<!--                        </field>-->
-<!--                    </group>-->
-<!--                </page>-->
-<!--            </xpath>-->
-<!--        </field>-->
-<!--    </record>-->
-<!--</odoo>-->
+    <record id="education_view_employee_form" model="ir.ui.view">
+        <field name="name">hr.employee.form.education</field>
+        <field name="model">hr.employee</field>
+        <field name="inherit_id" ref="hr.view_employee_form"/>
+        <field name="arch" type="xml">
+            <xpath expr="//group[@name='work_permit']" position="after">
+                <page string="Emergency Contact">
+                    <group>
+                        <field name="education_ids" widget="one2many_list">
+                            <tree editable="top">
+                                <field name="institute"/>
+                                <field name="degree"/>
+                                <field name="passing_year"/>
+                            </tree>
+                        </field>
+                    </group>
+                </page>
+            </xpath>
+        </field>
+    </record>
+</odoo>
