Added security rule!

--- a/Task1/custom_addons/employee_recruit/views/hr_applicant_ext_view.xml
+++ b/Task1/custom_addons/employee_recruit/views/hr_applicant_ext_view.xml
@@ -24,6 +24,7 @@
                         </tree>
                     </field>
                     <field name="parent_id" widget="many2one_tags"/>
+                    <button name="test_button" string="Debug" type="object"/>
                 </group>
             </xpath>
         </field>
